# RemoteDesk2

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-installer.yml  security-audit.yml
docs/: IPAD_SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
installer/: build.ps1  installer.nsi
installer/resources/: .gitkeep
installer/scripts/: configure-firewall.ps1  detect-gpu.ps1  first-run-wizard.ps1  generate-certs.ps1  install-services.ps1  uninstall-firewall.ps1
moonlight-web/server/: Cargo.toml  config.template.toml
moonlight-web/server/src/: auth.rs  config.rs  main.rs  signaling.rs
moonlight-web/web/: index.html  package.json  tsconfig.json  vite.config.ts
moonlight-web/web/public/: manifest.json
moonlight-web/web/src/: App.tsx  ipad-safari.ts  main.tsx  openh264-fallback.ts  stream-hooks.ts  sw.ts
sunshine-config/: moonlight-web-config.template.json  sunshine.conf.template
tailscale/: acl-policy.hujson  funnel-setup.ps1  tailscale-auth.ps1
turn-server/: docker-compose.yml  turnserver.conf
