[package]
name = "moonlight-web-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "web-server"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web    = { version = "4", features = ["rustls-0_23"] }
actix-files  = "0.6"
actix-rt     = "2"
actix-ws     = "0.4"

# Async runtime
tokio        = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# WebSocket upstream (Sunshine signaling proxy)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# TLS
rustls        = "0.23"
rustls-pemfile = "2"

# Static file embedding
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
bcrypt        = "0.16"
jsonwebtoken  = "9.3"

# Config / CLI
toml = "0.8.19"
clap = { version = "4", features = ["derive"] }

# Utilities
uuid      = { version = "1", features = ["v4"] }
log       = "0.4"
env_logger = "0.11"
anyhow    = "1"
